[package]
name = "mbfs"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"
homepage = "https://github.com/kyleb000/mbfs/wiki"
repositiory = "https://github.com/kyleb000/mbfs"
description = "Message Based Filesystem"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
